--- a/src/main/java/com/tonikelope/megabasterd/FileSplitterDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/FileSplitterDialog.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
     <Property name="title" type="java.lang.String" value="File Splitter"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -10,6 +10,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -81,7 +84,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/images/icons8-add-file-30.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Select file"/>
+        <Property name="text" type="java.lang.String" value="Select file/s"/>
         <Property name="doubleBuffered" type="boolean" value="true"/>
       </Properties>
       <Events>
@@ -172,7 +175,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/images/icons8-cut-30.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="SPLIT FILE"/>
+        <Property name="text" type="java.lang.String" value="SPLIT FILE/s"/>
         <Property name="doubleBuffered" type="boolean" value="true"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
