--- a/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/SettingsDialog.form
@@ -508,7 +508,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="12" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Use this proxy list Format is [*]IP:PORT[@user_b64:password_b64]"/>
+                    <Property name="text" type="java.lang.String" value="Use this proxy list Format is [*]IP:PORT[@user_b64:password_b64] OR #PROXY_LIST_URL"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="rec_smart_proxy_label1">
