--- a/src/main/java/com/tonikelope/megabasterd/FileGrabberDialog.form
+++ b/src/main/java/com/tonikelope/megabasterd/FileGrabberDialog.form
@@ -285,6 +285,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="14" style="1"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Enable log file"/>
             <Property name="doubleBuffered" type="boolean" value="true"/>
             <Property name="enabled" type="boolean" value="false"/>
